--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-bitcoin-seeder
+hodlcoin-seeder
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
+HOdlcoin-seeder is a crawler for the HOdlcoin network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
